--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>Zeltoria-APIs | Home
+<title>Galih-APIs | Home
 </title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -85,7 +85,7 @@
 </div>
 <ul id="icons01" class="icons">
 <li>
-<a class="n01" href="https://facebook.com/Danilelistz19" target="_blank">
+<a class="n01" href="https://facebook.com/" target="_blank">
 <svg>
 <use xlink:href="#icon-906">
 </use>
@@ -95,7 +95,7 @@
 </a>
 </li>
 <li>
-<a class="n02" href="https://github.com/Zeltoria" target="_blank">
+<a class="n02" href="https://github.com/WhatIfTrollFacee" target="_blank">
 <svg>
 <use xlink:href="#icon-907">
 </use>
@@ -105,7 +105,7 @@
 </a>
 </li>
 <li>
-<a class="n03" href="https://instagram.com/Zeltoria" target="_blank">
+<a class="n03" href="https://instagram.com/glhgnwnn" target="_blank">
 <svg>
 <use xlink:href="#icon-910">
 </use>
