--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Free Rest Api. No Need Api Key And Unlimited Requests...">
-    <meta name="author" content="Vihanga YT">
+    <meta name="author" content="Galih">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/123985221?v=4">
     <title>Zeltoria-APIs │ Docs</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
